test/memory/shannon/memstatFlag.good
memstatFlag.chpl:4: error: printMemStat() only works with the --memstat flag
